--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+set-option -g default-command "reattach-to-user-namespace -l zsh" # or bash
+bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"
+bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
 set-option -g default-shell /bin/zsh
 set -g prefix C-Space
 #set -g prefix C-a
