Adds fzf plugin and redoes others

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ set -g visual-activity on
 ############################################################################
 # utf8 support
 ############################################################################
-set-window-option -g utf8 on
+#set-window-option -g utf8 on
 
 ############################################################################
 # The foreground color of a pane is the actual dashed line that makes up the border.
@@ -31,7 +31,7 @@ set -g pane-active-border-bg yellow
 setw -g mode-bg black
 set -g status-fg white
 set -g status-bg black
-set -g status-utf8 on
+#set -g status-utf8 on
 
 ############################################################################
 # Automatically set window title
