--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,10 @@
+unbind C-b # unbind default leader key
+#set -g prefix C-Space
+set -g prefix C-a
 set-option -g default-command "reattach-to-user-namespace -l zsh" # or bash
 set-option -g default-shell /bin/zsh
 set-option -g history-limit 10000
 set-option -g default-terminal "screen-256color"
-set -g prefix C-Space
 set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
@@ -44,10 +46,6 @@ setw -g automatic-rename
 set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T'
 
-############################################################################
-# Unbindings
-############################################################################
-unbind C-b # unbind default leader key
 
 ############################################################################
 # Bindings
