--- a/tmuxinator/credit-puller.yml
+++ b/tmuxinator/credit-puller.yml
@@ -1,6 +1,10 @@
 name: credit-puller
-root: ~/Work/credit-puller
+root: ~/code/work/credit-puller
 windows:
-  - editor: vim
   - shell:
+      layout: main-horizontal
+      panes:
+        - shell:
+        - shell:
+        - shell:
   - server: bundle exec rails server -p 3007
