--- a/tmuxinator/mbc.yml
+++ b/tmuxinator/mbc.yml
@@ -1,8 +1,12 @@
 name: mbc
-root: ~/Work/mbc
+root: ~/code/work/mbc
 windows:
-  - editor: vim
   - shell:
+      layout: main-horizontal
+      panes:
+        - shell:
+        - shell:
+        - shell:
   - server: bundle exec rails server -p 3000 -b 127.0.0.1
   - webpacker: bin/webpack-dev-server
   - solr: bundle exec rake sunspot:solr:run
