--- a/tmuxinator/mbc_tools.yml
+++ b/tmuxinator/mbc_tools.yml
@@ -1,5 +1,9 @@
 name: mbc_tools
-root: ~/Work/mbc_tools
+root: ~/code/work/mbc_tools
 windows:
-  - editor: vim
   - shell:
+      layout: main-horizontal
+      panes:
+        - shell:
+        - shell:
+        - shell:
