--- a/tmuxinator/nnapp.yml
+++ b/tmuxinator/nnapp.yml
@@ -1,5 +1,9 @@
 name: nnapp
-root: ~/Work/nnapp
+root: ~/code/work/nnapp
 windows:
-  - editor: vim
   - shell:
+      layout: main-horizontal
+      panes:
+        - shell:
+        - shell:
+        - shell:
