--- a/tmuxinator/rate_against_the_machine.yml
+++ b/tmuxinator/rate_against_the_machine.yml
@@ -1,6 +1,10 @@
 name: rate
-root: ~/Work/rate_against_the_machine
+root: ~/code/work/rate_against_the_machine
 windows:
-  - editor: vim
   - shell:
+      layout: main-horizontal
+      panes:
+        - shell:
+        - shell:
+        - shell:
   - server: bundle exec rackup config.ru -p 9292
